prusti-tests/tests/runtime_checks/fail/predicates/nested-predicate.stderr
error: [Prusti: invalid specification] Referring to predicate that is not runtime checkable in specifications that should be runtime checked is not allowed
  --> $DIR/nested-predicate.rs:9:10
   |
9  |         !even(x)
   |          ^^^^
   |
note: this predicate can not be checked at runtime, make sure it has a body and mark it with #[insert_runtime_check]
  --> $DIR/nested-predicate.rs:15:5
   |
15 | /     fn even(x: i32) -> bool {
16 | |         x % 2 == 0
17 | |     }
   | |_____^

error: aborting due to previous error

